Add Conky GPU monitoring configuration and setup script

--- a/system_config/conky.conf
+++ b/system_config/conky.conf
@@ -54,11 +54,19 @@ ${color grey}Networking:
 Up:$color ${upspeed} ${color grey} - Down:$color ${downspeed}
 $hr
 ${color grey}GPU Info:
-${color grey}GPU Temp:$color ${execi 60 nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader}°C
-${color grey}GPU Util:$color ${execi 60 nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader}
-${color grey}VRAM Used:$color ${execi 60 nvidia-smi --query-gpu=memory.used --format=csv,noheader}
-${color grey}VRAM Total:$color ${execi 60 nvidia-smi --query-gpu=memory.total --format=csv,noheader}
-${color grey}GPU Power:$color ${execi 60 nvidia-smi --query-gpu=power.draw --format=csv,noheader}
+${color grey}GPU 0 (RTX 3090):
+${color grey} Temperature:$color ${execi 5 nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits -i 0}°C
+${color grey} Utilization:$color ${execi 5 nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader -i 0}
+${color grey} Memory:$color ${execi 5 nvidia-smi --query-gpu=memory.used --format=csv,noheader -i 0} / ${execi 5 nvidia-smi --query-gpu=memory.total --format=csv,noheader -i 0}
+${color grey} Power:$color ${execi 5 nvidia-smi --query-gpu=power.draw --format=csv,noheader -i 0}
+${color grey} Fan:$color ${execi 5 nvidia-smi --query-gpu=fan.speed --format=csv,noheader -i 0}
+
+${color grey}GPU 1 (GTX 980 Ti):
+${color grey} Temperature:$color ${execi 5 nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits -i 1}°C
+${color grey} Utilization:$color ${execi 5 nvidia-smi --query-gpu=utilization.gpu --format=csv,noheader -i 1}
+${color grey} Memory:$color ${execi 5 nvidia-smi --query-gpu=memory.used --format=csv,noheader -i 1} / ${execi 5 nvidia-smi --query-gpu=memory.total --format=csv,noheader -i 1}
+${color grey} Power:$color ${execi 5 nvidia-smi --query-gpu=power.draw --format=csv,noheader -i 1}
+${color grey} Fan:$color ${execi 5 nvidia-smi --query-gpu=fan.speed --format=csv,noheader -i 1}
 $hr
 ${color grey}Name              PID     CPU%   MEM%
 ${color lightgrey} ${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
